Refactor(jwt): change the generateToken() param to accept AppUser instead of userDetails